package com.mashreq.wealth.enums;

public enum EmailStatus {
    SENT_SUCCESS,
    NOT_PROCESSED,
    SENT_FAILURE
}
