package com.mashreq.wealth.enums;

public enum FileNameStatus {
    VALID,
    INVALID;
}
