package com.mashreq.wealth.enums;

public enum ProcessStatus {
    STARTED,
    NOT_STARTED,
    COMPLETED;
}
